<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transaction_history">

    <fragment
        android:id="@+id/nav_transaction_history"
        android:name="com.example.ilovezappos.ui.transaction_history.TransactionHistoryFragment"
        android:label="@string/menu_transaction_history"
        tools:layout="@layout/fragment_transaction_history" />

    <fragment
        android:id="@+id/nav_order_book"
        android:name="com.example.ilovezappos.ui.order_book.OrderBookFragment"
        android:label="@string/menu_order_book"
        tools:layout="@layout/fragment_order_book" />

    <fragment
        android:id="@+id/nav_price_alert"
        android:name="com.example.ilovezappos.ui.price_alert.PriceAlertFragment"
        android:label="@string/menu_price_alert"
        tools:layout="@layout/fragment_price_alert" />
</navigation>