<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:showDividers="middle"
    android:divider="?android:listDivider">

    <TextView
        android:id="@+id/asks_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/asks_table_header1"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/asks_amount_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/asks_table_header2"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/asks_value_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/asks_table_header3"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:background="@android:color/darker_gray"/>

</LinearLayout>